# seeker

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  best-seeker-architecture.html  docker-compose.yml  env-example  tarpaulin.toml
.github/workflows/: frontend.yml  tests.yml
.sqlx/: query-08d73ec66280bb78380d69124384ece7ef0561a1df3bfe8ced74f42eaa0da17d.json  query-10d1a3a84c25593e62e707b28a7ed6b4fe5b37d50378fa96f2d8fc67b8f49adc.json  query-15baed7930dca36bd0b028497d71f536962dd8c052e621c6b9820832722a3284.json  query-3108ae1d6e922991cfd659994e7b3b3082269a44e15142645a549db3e7ec5d6d.json  query-529836495ffc871f7ef0c315a6c2bef0ce9af5711240fd8dc69e26a14a05c7db.json  query-5579bd1a1b606bd428f480b3c11a845e98f104dc3fd094a5b638c65c70bd9148.json  query-591abeb6b8654efb70b15202655b9e20331ca4831d829e7f6fa784a62347fa7c.json  query-5d97aa04f489e129269cfcc87ec8f6d0bcb4cd4c699bc3ed783f106c5175ce22.json  query-73e463dcc0c9add8f938fe13f07bbf78e69f50dccfca72f3835b2a3e04ffe915.json  query-74151b372b8c4610849576a1512d1a0aa844e74e23e10be355158630776a0775.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-913b3c272fce785a49a8cb3f9fcdfe99be488d3c8635f7f7c8f8a80448db6fb3.json  query-943c6d8c87c3c118c38f02a894362771d79c71bbea09a321f4113f0494bf889d.json  query-991b77169120e27c946d35cef948d7eef8854b4dfe97f366210b39d659cbfcf9.json  query-9bc31bc262ba3b13fed180db6fb4a712cf33a377a75d448228d697078fb3d752.json  query-b52fcdcb04317c17304edec683811fdb0686125c7f283e15dc97a43155e0563f.json  query-b6e1da7e0faff5cf0a11f77534b20ebf261336caffd6073307ef54e8ebfea5ff.json  query-b95f244455dbb9b03b4a15acc7ccbc031cf54464f4262b1d47badde897145bdb.json  query-bf174a00142a490faacdd32c3755548bcc6e92e474a6ad9e880d35b8ad300ec4.json  query-cf07bacd0b05c575aa36ed2f56d8559c749852481fcbfbc0d1f9786744bff36d.json  query-e40c213f199a97b3d5c2d6acd1cee75aab0721833fcc999869a2265a9e50c498.json  query-eb7a7094c4523d44c4190f7228793b860c9ad152d54391e762197891be1b6482.json  query-ee57f970857c0cb5e18c791d90daffc38ab3fe2d1569a3d2285801e80fdfb90e.json  query-f30073c2993ec62d28360226f1bd7359b6a2c6252ac18148d4b044b7facca49b.json
docker/garage/: garage.toml
docker/observability/: docker-compose.observability.yml
docker/observability/alloy/: config.alloy
docker/observability/tempo/: config.yaml
docker/postgres/: init.sh
front/: .dockerignore  Dockerfile  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
front/src/: proxy.ts
front/src/__tests__/: proxy.test.ts
front/src/app/: error.tsx  layout.tsx  not-found.tsx  page.tsx
front/src/app/dashboard/: error.tsx  page.tsx
front/src/components/shared/: error-boundary.tsx  error-state.tsx
front/src/shared/: api-config.ts  http-client.ts  jwt.ts
front/src/test/: dummy.test.ts
migrations/: 20260123205902_create_users_table.sql  20260124090331_create_position_table.sql  20260131094300_add_deleted_to_positions.sql  20260210120000_drop_initial_comment_from_positions.sql  20260210123000_create_comments_table.sql  20260210130000_create_email_queue.sql  20260210190000_add_email_validated_to_users.sql  20260210192400_add_account_disabled_to_users.sql  20260211120000_add_email_queue_correlation.sql  20260211150000_create_scraper_queue.sql
scripts/: ddd-fitness-test.sh  provision_garage.sh
src/: composition_root.rs  main.rs
src/auth/application/: auth_service.rs  email_queue_enqueuer.rs  errors.rs  mod.rs  token_generator.rs  user_status_checker.rs
src/auth/domain/: errors.rs
src/auth/presentation/: dtos.rs  error.rs  errors.rs  handlers.rs  mod.rs  routes.rs
src/domain/entities/: errors.rs  interfaces.rs  mod.rs  position.rs
src/infra/: mod.rs  position_in_memory_repository.rs
src/positions/application/: comment_service.rs  errors.rs  mod.rs  position_service.rs
src/positions/domain/: errors.rs
src/positions/infra/: position_in_memory_repository.rs
src/positions/presentation/: comment_handlers.rs  comment_routes.rs  dtos.rs  errors.rs  handlers.rs  mod.rs  routes.rs
src/shared/: app_state.rs  config.rs  db_sync.rs  factory.rs  fixtures.rs  mod.rs  test_utils.rs
src/shared/domain/: error.rs  errors.rs  mod.rs  value_objects.rs
src/shared/infra/: mod.rs  postgres_conn.rs
src/shared/infrastructure/: mod.rs  observability.rs  postgres_conn.rs  test_factory.rs
src/shared/presentation/: mod.rs  openapi.rs
src/utils/: fixtures.rs
workers/email/: Cargo.toml  Dockerfile
workers/email/src/: main.rs
workers/scraper/: Dockerfile  pyproject.toml
workers/scraper/src/: analysis_service.py  db.py  main.py  s3.py  scraper.py
(+92 files in other folders)
