[package]
name = "best-seeker"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
chrono = {version = "0.4.43", features = ["serde"] }
email_address = "0.2.9"
rand = "0.8.5"
thiserror = "2.0.18"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
zxcvbn = "3.1.0"
async-trait = "0.1.89"
tokio = {version = "1.5.0", features = ["full"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "macros", "migrate", "uuid", "chrono" ] }
dotenvy = "0.15.7"
serde = "1.0.228"
serde_json = "1.0.149"
axum = "0.8.8"

[dev-dependencies]
http-body-util = "0.1.3"
temp-env = "0.3.6"
tower = { version = "0.5.3", features = ["util"] }
