[package]
name = "email-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
async-trait = "0.1.81"
dotenvy = "0.15.7"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "macros", "migrate", "uuid", "chrono" ] }
thiserror = "2.0.18"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
