[package]
name = "email-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
async-trait = "0.1.81"
dotenvy = "0.15.7"
opentelemetry = "0.29.1"
opentelemetry-appender-tracing = "0.29.1"
opentelemetry-otlp = { version = "0.29.0", features = ["grpc-tonic", "logs", "trace"] }
opentelemetry_sdk = { version = "0.29.0", features = ["rt-tokio", "trace"] }
opentelemetry-semantic-conventions = "0.29.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "macros", "migrate", "uuid", "chrono" ] }
thiserror = "2.0.18"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-opentelemetry = "0.30.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
